objects/LicenseApplication__c.object
<CustomObject>
    <fields>
        <fullName>Appeal_Stage__c</fullName>
        <label>Appeal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                    <default>true</default>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Appeal_Date__c</fullName>
        <label>Application Appeal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Approved_Date__c</fullName>
        <label>Application Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Closed_Date__c</fullName>
        <label>Application Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_ID_OLD__c</fullName>
        <label>Application ID - Do Not Use</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Notes__c</fullName>
        <label>Application Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Owner_Check_Fx__c</fullName>
        <formula>if( $User.Id =  Report_Owner_Id__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Owner Check Fx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Owner_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp;  Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Password__c</fullName>
        <label>Application Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>On-Track</fullName>
                </value>
                <value>
                    <fullName>Stuck</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                    <isActive>false</isActive>
                    <label>Cleared</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <isActive>false</isActive>
                    <label>Under Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Processor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_User_Name__c</fullName>
        <label>Application User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Username__c</fullName>
        <label>Application Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Withdrawn_Date__c</fullName>
        <label>Application Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COAM_ID_Application_Web_ID__c</fullName>
        <label>COAM ID/ Application Web ID?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleared_Date__c</fullName>
        <label>Cleared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denied_Date__c</fullName>
        <label>Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFT_Form_Submitted__c</fullName>
        <label>EFT Form Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEIN_Number_Acct__c</fullName>
        <formula>Location_DBA__r.FEIN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FEIN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEIN_Number__c</fullName>
        <label>obsolete FEIN Number</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Paid_Date__c</fullName>
        <label>Application Fee Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finger_Printing_Date__c</fullName>
        <label>Finger Printing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fingerprinting_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fingerprinting Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Appeal_Date__c</fullName>
        <formula>Text(License__r.License_Appeal_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Appeal Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Denied_Date__c</fullName>
        <formula>Text(License__r.License_Denied_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Denied Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Issued_Date__c</fullName>
        <formula>License__r.License_Issue_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licensed_Date__c</fullName>
        <formula>Text(License__r.License_Original_Issue_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensed Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_DBA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>License_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>License_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preliminary_Approval__c</fullName>
        <label>Preliminary Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>License_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Manager Account</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Owner_Id__c</fullName>
        <label>Report Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STI_Form_Submitted__c</fullName>
        <label>STI Form Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Safe_Application_ID__c</fullName>
        <label>Safe Application ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>State_Reviewed</fullName>
                    <label>State Reviewed</label>
                </value>
                <value>
                    <fullName>Licensed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Formula__c</fullName>
        <formula>Location_DBA__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_ID_Number__c</fullName>
        <label>Temp ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Applications__c</fullName>
        <formula>Location_DBA__r.Total_Applications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Applications</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IGB Video Gaming</fullName>
                </value>
                <value>
                    <fullName>GLC_COAM_Class</fullName>
                    <label>GLC COAM Class B</label>
                </value>
                <value>
                    <fullName>NE Cash Device</fullName>
                </value>
                <value>
                    <fullName>DOJ</fullName>
                    <isActive>false</isActive>
                    <label>DOJ</label>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                    <isActive>false</isActive>
                    <label>Gaming</label>
                </value>
                <value>
                    <fullName>Generic Application</fullName>
                    <isActive>false</isActive>
                    <label>Generic Application</label>
                </value>
                <value>
                    <fullName>Illinois Business Authorization</fullName>
                    <isActive>false</isActive>
                    <label>Illinois Business Authorization</label>
                </value>
                <value>
                    <fullName>Liquor</fullName>
                    <isActive>false</isActive>
                    <label>Liquor</label>
                </value>
                <value>
                    <fullName>Local Gaming License</fullName>
                    <isActive>false</isActive>
                    <label>Local Gaming License</label>
                </value>
                <value>
                    <fullName>Local Liquor License</fullName>
                    <isActive>false</isActive>
                    <label>Local Liquor License</label>
                </value>
                <value>
                    <fullName>State Liquor License</fullName>
                    <isActive>false</isActive>
                    <label>State Liquor License</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Processor_Fx__c</fullName>
        <formula>If( $User.Id = Application_Submitted_By__r.Id ,TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Processor Fx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_ID__c</fullName>
        <label>Application ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Applications</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>NE Cash Device</value>
        </filters>
        <label>All Applications</label>
    </listViews>
    <listViews>
        <fullName>Applications_missing_FP_FEE_IL</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Fingerprinting_Complete__c</columns>
        <columns>Fee_Paid_Date__c</columns>
        <columns>Application_Notes__c</columns>
        <columns>Stage__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Application_Submitted_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fingerprinting_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Fee_Paid_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>IGB Video Gaming</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Applications missing FP &amp; FEE (IL)</label>
        <sharedTo>
            <group>List_View_Sales_Operation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Denied</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <label>Denied</label>
    </listViews>
    <listViews>
        <fullName>IL_Applications_Submitted_This_Week</fullName>
        <columns>Submitted_Date__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_By__c</columns>
        <columns>Fee_Paid_Date__c</columns>
        <columns>Fingerprinting_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>IGB Video Gaming</value>
        </filters>
        <label>IL Applications Submitted This Week</label>
        <sharedTo>
            <group>List_View_Sales_Operation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Licensed</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Licensed</value>
        </filters>
        <label>Licensed</label>
    </listViews>
    <listViews>
        <fullName>NEW_Applications_IL</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>IGB Video Gaming</value>
        </filters>
        <label>NEW Applications (IL)</label>
        <sharedTo>
            <group>List_View_Sales_Operation</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Amusement_Application</fullName>
        <active>true</active>
        <label>Amusement Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>DOJ</fullName>
        <active>false</active>
        <label>DOJ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic_Application</fullName>
        <active>true</active>
        <label>Generic Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>IL_Business_Authorization</fullName>
        <active>false</active>
        <label>IL Business Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Liquor_Application</fullName>
        <active>false</active>
        <label>Local Liquor Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Liquor_Application</fullName>
        <active>false</active>
        <label>State Liquor Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video_Gaming_Application</fullName>
        <active>true</active>
        <label>Video Gaming Application</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approved_Status</fullName>
        <active>false</active>
        <errorConditionFormula>IF(OR(Text(Stage__c) = &apos;Approved&apos; &amp;&amp; isBlank(License_Number__c), Text(Appeal_Stage__c) = &apos;Approved&apos; &amp;&amp; isBlank(License_Number__c)), True, False)</errorConditionFormula>
        <errorDisplayField>License_Number__c</errorDisplayField>
        <errorMessage>Must Enter License Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Status_before_Submitted_Date</fullName>
        <active>false</active>
        <errorConditionFormula>And(Isblank(text(Stage__c)), Not(ISBlank( Submitted_Date__c )))</errorConditionFormula>
        <errorDisplayField>Stage__c</errorDisplayField>
        <errorMessage>Enter Stage before Submitted Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_Stage</fullName>
        <active>false</active>
        <errorConditionFormula>CASE(   Stage__c  ,
&quot;Submitted&quot;,1,
&quot;Pending&quot;,2,
&quot;Approved&quot;,3,
&quot;Rejected&quot;,4,
&quot;Closed&quot;,5,0)
&gt;
CASE (TEXT(PRIORVALUE(Stage__c)) ,
&quot;Submitted&quot;,1,
&quot;Pending&quot;,2,
&quot;Approved&quot;,3,0)</errorConditionFormula>
        <errorMessage>Follow the Application Process - Please submit the Application first</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventStageSkip</fullName>
        <active>false</active>
        <errorConditionFormula>IF( CreatedDate =  LastModifiedDate &amp;&amp; (Text( Stage__c )= &apos;Pending&apos; || Text(Stage__c)==&apos;Approved&apos;), True, False)</errorConditionFormula>
        <errorMessage>Test Error</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Approve_to_Rejected_or_Appeal</fullName>
        <active>false</active>
        <errorConditionFormula>IF( OR(Text(Stage__c)=&quot;Rejected&quot; &amp;&amp; Text(PRIORVALUE(Stage__c))=&quot;Approved&quot;, Text(Stage__c)=&quot;Appeal&quot; &amp;&amp; Text(PRIORVALUE(Stage__c))=&quot;Approved&quot;) , TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Application is Already Approved. Cannot be Rejected or Appealed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STI_Form_Submitted_must_be_completed</fullName>
        <active>false</active>
        <errorConditionFormula>Isblank(STI_Form_Submitted__c) &amp;&amp;  Isblank(EFT_Form_Submitted__c) &amp;&amp; Text(Type__c)=&quot;GLC_COAM_Class&quot; &amp;&amp;  Not(Isblank(Submitted_Date__c))</errorConditionFormula>
        <errorMessage>EFT Form Submitted AND STI Form Submitted must be complete PRIOR to the Application Submitted Date.</errorMessage>
    </validationRules>
</CustomObject>